--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = fild
-version = 0.0.1
+version = 0.0.2
 author = Elena Kulgavaya
 author_email = elena.kulgavaya@gmail.com
 description = Library to describe contracts and generate data
@@ -16,9 +16,12 @@ classifiers =
 
 [options]
 package_dir =
-     = fild
+     = src
 packages = find:
 python_requires = >=3.7
+install_requires =
+    Faker ==11.3.0
+    pytz ==2021.3
 
 [options.packages.find]
-where = fild
+where = src
