--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,6 @@ jobs:
         pip install -r requirements.txt
     - name: Running tests
       run: |
-        python -m doctest fild/process/common.py -v 
-        python -m doctest fild/process/dictionary.py -v
+        python -m doctest src/fild/process/common.py -v 
+        python -m doctest src/fild/process/dictionary.py -v
         python -m unittest -v
