--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Running tests
       run: |
         cd src/
-        python -m doctest src/fild/process/common.py -v 
-        python -m doctest src/fild/process/dictionary.py -v
+        python -m doctest fild/process/common.py -v 
+        python -m doctest fild/process/dictionary.py -v
         python -m unittest -v
