--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
         pip install -r requirements.txt
     - name: Running tests
       run: |
+        cd src/
         python -m doctest fild/process/common.py -v 
         python -m doctest fild/process/dictionary.py -v
-        python -m unittest -v
+        python -m unittest discover -s ../
