--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,19 +10,29 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.9'
         cache: 'pip'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements/test.txt
     - name: Running tests
       run: |
-        cd src/
-        python -m doctest fild/process/common.py -v 
-        python -m doctest fild/process/dictionary.py -v
-        python -m unittest discover -s ../
+        pytest --cache-clear --junitxml ./test-report.xml --cov-report term-missing:skip-covered --cov src > pytest-coverage.txt
+
+    - name: Pytest coverage comment
+      if: always()
+      uses: MishaKav/pytest-coverage-comment@main
+      with:
+        pytest-coverage-path: ./pytest-coverage.txt
+        junitxml-path: ./test-report.xml
+
+    - name: Publish test report
+      if: always()
+      uses: elenakulgavaya/pytest-report-action@v1.3
+      with:
+        path: test-report.xml
