--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = fild
-version = 0.1.0'
+version = 0.1.0
 author = Elena Kulgavaya
 author_email = elena.kulgavaya@gmail.com
 description = Library to describe contracts and generate data
