--- a/.pylintrc
+++ b/.pylintrc
@@ -4,6 +4,7 @@ ignore=LICENSE,
     pyproject.toml,
     README.md,
     requirements/,
+    docs/,
     pytest.ini,
     setup.cfg,
     pytest-coverage.txt,
