--- a/.pylintrc
+++ b/.pylintrc
@@ -9,7 +9,8 @@ ignore=LICENSE,
     pytest-coverage.txt,
     test-report.xml
 ignore-paths=dist,
-    fild.egg-info
+    fild.egg-info,
+    docs
 
 py-version=3.7
 suggestion-mode=yes
