--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,34 @@ requires = [
     "Faker==11.3.0",
     "pytz==2021.3",
 ]
-build-backend = "setuptools.build_meta:__legacy__"
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "fild"
-authors = [{name="Elena Kulgavaya", email="elena.kulgavaya@gmail.com"}]
-dynamic = ["version", "description"]
+description = "Library to describe contracts and generate data"
 readme = "README.md"
+requires-python = ">=3.7"
+license = { text = "MIT" }
+authors = [
+    {name="Elena Kulgavaya", email="elena.kulgavaya@gmail.com"}
+]
+dynamic = ["version"]
 keywords = ["testing", "automation", "python", "pytest plugin"]
+dependencies = [
+    "Faker==11.3.0",
+    "pytz==2021.3",
+]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-dir]
+"" = "src"
+
+[project.urls]
+"Bug Tracker" = "https://github.com/elenakulgavaya/fild/issues"
