--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ where = ["src"]
 "" = "src"
 
 [tool.setuptools_scm]
+version_scheme = "guess-next-dev"
+local_scheme = "no-local-version"
 
 [project.urls]
 "Bug Tracker" = "https://github.com/elenakulgavaya/fild/issues"
