--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,36 +1,34 @@
-name: Release
+name: Create Release
 
 on:
   push:
     branches:
       - main
-    paths-ignore:
-      - README.md
-      - docs/**
 
 permissions:
-  contents: write   # required for tagging + releases
+  contents: write
 
 jobs:
-  release:
+  tag-and-release:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # REQUIRED for setuptools-scm
+          fetch-depth: 0   # REQUIRED for setuptools-scm
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
-      - name: Install deps
-        run: |
-          pip install build twine setuptools-scm
+      - run: pip install build setuptools-scm
 
-      # 🔥 Auto bump tag (patch version)
-      - name: Bump version and tag
+      # 🔥 build FIRST
+      - name: Build package
+        run: python -m build
+
+      # 🔥 create tag
+      - name: Create tag
         id: tag
         uses: anothrNick/github-tag-action@1.67.0
         env:
@@ -38,10 +36,9 @@ jobs:
           DEFAULT_BUMP: patch
           WITH_V: true
 
-      - name: Build
-        run: python -m build
-
+      # 🔥 attach artifacts to release
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.tag.outputs.new_tag }}
+          files: dist/*
