--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "fild"
 description = "Library to describe contracts and generate data"
-readme = "README.md"
+readme = { file = "README.rst", content-type = "text/x-rst" }
 requires-python = ">=3.7"
 license = { text = "MIT" }
 authors = [
