--- a/.pylintrc
+++ b/.pylintrc
@@ -3,6 +3,7 @@ init-hook='import sys; sys.path.append("./src")'
 ignore=LICENSE,
     pyproject.toml,
     README.md,
+    README.rst,
     requirements/,
     pytest.ini,
     setup.cfg,
