--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "fild"
 description = "Library to describe contracts and generate data"
+long_description = "file: README.rst"
+long_description_content_type = "text/x-rst"
 readme = { file = "README.rst", content-type = "text/x-rst" }
 requires-python = ">=3.7"
 license = { text = "MIT" }
